VKT(Backend): Allow updating and creating examiner details through same API endpoint